--- a/ebayclone/server/package.json
+++ b/ebayclone/server/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "target/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "postinstall": "tsc -p ."
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
