--- a/ebayclone/client/package.json
+++ b/ebayclone/client/package.json
@@ -7,9 +7,17 @@
     "@types/node": "11.9.3",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "@types/react-router-dom": "^4.3.1",
+    "express": "^4.16.4",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "superagent": "^4.1.0",
     "typescript": "3.3.3"
   },
   "scripts": {
