--- a/ebayclone/client/package.json
+++ b/ebayclone/client/package.json
@@ -7,7 +7,10 @@
     "@types/node": "11.9.3",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "@types/react-redux": "^7.0.1",
     "@types/react-router-dom": "^4.3.1",
+    "@types/superagent": "^3.8.6",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
