--- a/ebayclone/server/package.json
+++ b/ebayclone/server/package.json
@@ -15,6 +15,7 @@
     "@types/koa-bodyparser": "^4.2.1",
     "@types/koa-multer": "^1.0.0",
     "@types/koa-router": "^7.0.39",
+    "kcors": "^2.2.2",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-multer": "^1.0.2",
